--- a/app/src/main/res/layout/activity_user_home_page.xml
+++ b/app/src/main/res/layout/activity_user_home_page.xml
@@ -3,48 +3,55 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-<androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
 
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".logged.UserHomePageActivity">
-    <include layout="@layout/toolbar"/>
-
-    <RelativeLayout
-        android:id="@+id/home_page"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        tools:context=".logged.UserHomePageActivity">
 
-        <FrameLayout
-            android:id="@+id/fl_wrapper"
+        <include layout="@layout/toolbar" />
+
+        <RelativeLayout
+            android:id="@+id/home_page"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_above="@+id/bottom_navigation"
-            android:layout_marginBottom="0dp"
-            android:layout_marginTop="60dp">
+            android:layout_height="match_parent">
 
+            <ImageButton
+                android:id="@+id/notify"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="340dp"
+                android:layout_marginTop="10dp"
+                app:srcCompat="@android:drawable/btn_star_big_on" />
 
-        </FrameLayout>
+            <FrameLayout
+                android:id="@+id/fl_wrapper"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_above="@+id/bottom_navigation"
+                android:layout_marginTop="60dp"
+                android:layout_marginBottom="0dp">
+                
+            </FrameLayout>
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/fAddTaskButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="90dp"
-            android:layout_marginStart="330dp"
-            android:layout_marginEnd="10dp"
-            android:src="@drawable/ic_baseline_add_24"
-            android:layout_alignParentBottom="true"/>
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/fAddTaskButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_marginStart="330dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginBottom="90dp"
+                android:src="@drawable/ic_baseline_add_24" />
 
-        <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/bottom_navigation"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:background="?android:attr/windowBackground"
-            app:menu="@menu/bottom_navigation_menu" />
+            <com.google.android.material.bottomnavigation.BottomNavigationView
+                android:id="@+id/bottom_navigation"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:background="?android:attr/windowBackground"
+                app:menu="@menu/bottom_navigation_menu" />
 
-    </RelativeLayout>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+        </RelativeLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
