--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -60,6 +60,9 @@
         android:name="com.app.quokka.logged.AvailableTasksBrowser"
         android:label="fragment_available_tasks_browser"
         tools:layout="@layout/fragment_available_tasks_browser" >
+        <action
+            android:id="@+id/action_availableTasksBrowser_to_taskFragment"
+            app:destination="@id/taskFragment" />
     </fragment>
     <fragment
         android:id="@+id/userProfile"
