--- a/app/src/main/res/layout/activity_full_user_task.xml
+++ b/app/src/main/res/layout/activity_full_user_task.xml
@@ -17,8 +17,8 @@
             android:focusable="false"
             android:hint="Task name"
             android:textAlignment="center"
-            android:textColor="@color/design_default_color_primary"
-            android:textColorHint="@color/design_default_color_primary"
+            android:textColor="@color/blue_700"
+            android:textColorHint="@color/blue_700"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -126,7 +126,7 @@
             android:id="@+id/taskStartDateFrame"
             android:layout_width="120dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="50dp"
             android:layout_marginEnd="0dp"
             android:clickable="false"
             android:focusable="false"
@@ -172,7 +172,7 @@
             android:id="@+id/taskEndDateFrame"
             android:layout_width="120dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="50dp"
             android:layout_marginEnd="0dp"
             android:clickable="false"
             android:focusable="false"
@@ -219,14 +219,15 @@
             android:id="@+id/fullTaskTakerFrame"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="25dp"
             android:clickable="false"
             android:focusable="false"
+            android:layout_marginBottom="15dp"
             android:hint="Taken by"
             android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/taskStartDateFrame">
+            app:layout_constraintTop_toBottomOf="@id/taskStartDateFrame"
+            app:layout_constraintBottom_toBottomOf="parent">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/fullTaskTakerEdit"
@@ -241,7 +242,7 @@
             android:id="@+id/fullButtonEditTask"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="45dp"
+            android:layout_marginBottom="60dp"
             android:text="EDIT"
             android:textSize="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
