--- a/app/src/main/res/layout/activity_full_task.xml
+++ b/app/src/main/res/layout/activity_full_task.xml
@@ -20,8 +20,8 @@ tools:context=".tasks.FullTaskActivity">
         app:layout_constraintTop_toTopOf="parent"
         android:focusable="false"
         android:clickable="false"
-        android:textColor="@color/design_default_color_primary"
-        android:textColorHint="@color/design_default_color_primary">
+        android:textColor="@color/blue_700"
+        android:textColorHint="@color/blue_700">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/fullTaskNameEdit"
