--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -3,12 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-  <data>
-    <variable
-        name="userInfo"
-        type="com.app.quokka.UserInfo" />
-  </data>
-
   <FrameLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent">
@@ -117,7 +111,7 @@
         android:layout_width="220dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:hint="Address"
+        android:hint="Address (City)"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/password2EditTextSignUpAFrame">
